force-app/main/default/objects/prox__Pro_File_Field_Mapping_mdt__mdt/prox__Pro_File_Field_Mapping_mdt__mdt.object-meta.xml
<CustomObject>
    <label>File Field Mapping</label>
    <pluralLabel>File Field Mappings</pluralLabel>
</CustomObject>