force-app/main/default/objects/prox__Pro_File_Field_Mapping_mdt__mdt/fields/prox__Activate__c.field-meta.xml
<CustomField>
    <fullName>prox__Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>