force-app/main/default/objects/prox__Pro_File_Field_Mapping_mdt__mdt/fields/prox__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>prox__Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>double</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>integer</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>