force-app/main/default/objects/prox__Pro_File_Field_Mapping_mdt__mdt/fields/prox__File_Upload_Config__c.field-meta.xml
<CustomField>
    <fullName>prox__File_Upload_Config__c</fullName>
    <label>File Upload Config</label>
    <referenceTo>prox__Pro_File_Upload_Config__mdt</referenceTo>
    <relationshipLabel>File Field Mappings</relationshipLabel>
    <relationshipName>File_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>