force-app/main/default/objects/prox__Pro_File_Field_Mapping_mdt__mdt/fields/prox__Is_Lookup__c.field-meta.xml
<CustomField>
    <fullName>prox__Is_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lookup?</label>
    <type>Checkbox</type>
</CustomField>