force-app/main/default/objects/prox__Pro_File_Field_Mapping_mdt__mdt/fields/prox__Lookup_Field_API__c.field-meta.xml
<CustomField>
    <fullName>prox__Lookup_Field_API__c</fullName>
    <label>Lookup Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>