force-app/main/default/objects/prox__Pro_File_Field_Mapping_mdt__mdt/fields/prox__Required__c.field-meta.xml
<CustomField>
    <fullName>prox__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>