force-app/main/default/objects/prox__Pro_File_Field_Mapping_mdt__mdt/fields/prox__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>prox__Target_Field__c</fullName>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>